Add verification details to filtered Ledger view
